Этап 2 Дипломный проект. Небольшая уборка в тестах